--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <header>
     <h1>KemaloS</h1>
-    <img src="img/kml2.jpg" width="150" alt="KemaloS"/>
+    <img src="img/kmls2.jpg" width="150" alt="KemaloS"/>
     <nav>
         <ul>
             <li><a href="#summary">Summary</a></li>
