--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="UTF-8">
     <title>KemaloS</title>
     <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+    <style>
+        body {
+            margin: 0 auto;
+            max-width: 50em;
+            font-family: "Helvetica", "Arial", sans-serif;
+            line-height: 1.5;
+            padding: 4em 1em;
+            color: #555;
+        }
+        
+        h2 {
+            margin-top: 1em;
+            padding-top: 1em;
+        }
+
+        h1, h2, strong {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
 <header>
     <h1>KemaloS</h1>
-    <img src="img/kml2.jpg" width="150" alt="KemaloS"/>
+    <img src="img/kmls2.jpg" width="150" alt="KemaloS"/>
     <nav>
         <ul>
             <li><a href="#summary">Summary</a></li>
